--- a/view-allplayers.html
+++ b/view-allplayers.html
@@ -9,7 +9,7 @@
     <!-- Navbar -->
   <nav class="bg-blue-900 text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">Team Name</a>
+      <a href="index.html" class="text-2xl font-bold">FC BALOKOLE</a>
       <div>
         <a href="index.html#home" class="mr-4 hover:underline">Home</a>
         <a href="index.html#gallery" class="mr-4 hover:underline">Gallery</a>
