--- a/view-allplayers.html
+++ b/view-allplayers.html
@@ -114,7 +114,7 @@
       <a href="index.html" class="text-2xl font-bold">FC BALOKOLE</a>
       <div>
         <a href="index.html#home" class="mr-4 hover:underline">Home</a>
-        <a href="index.html#gallery" class="mr-4 hover:underline">Gallery</a>
+        <a href="index.html#schedule" class="mr-4 hover:underline">Gallery</a>
         <a href="index.html#gallery" class="hover:underline">Gallery</a>
       </div>
     </div>
